Set up test infrastructure for backend (#65)
* Added api response parsing to requests.

* Set up basic testing infrastructure. This should fail checks.

* Fix actions to test on push.

* Add test reporter.

* Update build_and_lint.yml

* created test stage and added to APIUtils enum

* patch and delete HTTP Utils

* Add basic request api functionality testing and post custom request utility.

* added user utils for posting random user and creating user from user api response

* Clean up logic for determining stage to which we're making request.

* simple user test is in

* removed unused imports in userhandler class

* Add check for stage in environmental variables.

* removed unneeded code in userhandler

* Request equals method.

* Updated stage to prod where necessary.

Co-authored-by: Adam Fernandes <fernadam8@gmail.com>